appId: swmansion.enriched.markdown.example
tags:
  - smoke
  - block
  - commonmark
  - text
---
- launchApp

- runFlow:
    file: '../../../../subflows/move_to_playground.yaml'

- tapOn:
    id: flavor-button

- assertVisible: 'Flavor: CommonMark'

- tapOn:
    id: insert-pipe-table-button

- scrollUntilVisible:
    element:
      text: '\| Model \| Speed \| \|---\|---\| \| Claude \| Fast \|'
    direction: DOWN

- assertVisible: '\| Model \| Speed \| \|---\|---\| \| Claude \| Fast \|'
